--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -5,6 +5,11 @@
 }
 
 
+@font-face {
+  font-family: MRegular;
+  src: url(/fonts/MarvelRegular-Dj83.ttf);
+}
+
 
 
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,100,900);
@@ -109,7 +114,7 @@ nav div#Logo-container img {
     box-sizing: border-box;
   height: 100%;
   width: 100%;
-    font-family: 'Roboto', sans-serif;
+    font-family: MRegular;
   font-weight: 400;
   -webkit-box-align: center;
           align-items: center;
@@ -124,7 +129,9 @@ nav div#Logo-container img {
   text-align: center;
 
     position: relative;
-    top: -80%;
+    top: -50%;
+
+
 
 }
 @media (min-width: 600px) {
@@ -144,11 +151,11 @@ nav div#Logo-container img {
 .btn {
   color: #fff;
   cursor: pointer;
-  font-size: 26px;
+  font-size: 46px;
   font-weight: 400;
   line-height: 45px;
   margin: 0 0 2em;
-  max-width: 160px;
+
   position: relative;
   text-decoration: none;
   text-transform: uppercase;
@@ -167,6 +174,7 @@ nav div#Logo-container img {
 
 .btn-2 {
   letter-spacing: 0;
+
 }
 
 .btn-2:hover,
