--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -241,7 +241,7 @@ section#Content{
 
 
 section#Content ul{
-    position: relative;
+    position: absolute;
     width: 100%;
     height: 100%;
     display: flex;
@@ -258,12 +258,17 @@ section#Content ul{
 section#Content ul li{
     position: relative;
     width: 15%;
-    height: 400px;
+    height: 40%;
 
     cursor: pointer;
 
-    margin-top: 40px;
-    margin-left: 50px;
+    margin: 0.9%;
+
+    min-width: 230px;
+    padding: 0;
+    border: 0;
+
+    overflow: hidden;
 
     background-image: url(/Images/Avengers-Endgame-2019-Android-Wallpaper.jpg);
     background-position: center;
@@ -288,9 +293,58 @@ section#Content ul li div.bg{
     width: 100%;
     height: 100%;
     position: absolute;
+
+    top: 80%;
+
     z-index: 0;
-    /*background-color: rgba(255,0,0,0.5);*/
+    background-color: rgba(0,0,0,1);
 }
+
+section#Content ul li:hover div.bg{
+    top: 0%;
+}
+
+section#Content ul li
+
+#panel1{
+    display: none;
+
+}
+
+#panel2 {
+
+
+}
+
+#panel3 {
+
+}
+
+#pageButtons {
+    width: 500px;
+    height: 100px;
+
+    position: absolute;
+    bottom: 0px;
+
+    color: red;
+
+    display: flex;
+    flex-direction: row;
+}
+
+.pButton{
+    width: 50px;
+    height: 50px;
+
+    border: 2px solid black;
+    text-align: center;
+    margin: 20px;
+
+    cursor: pointer;
+}
+
+
 
 
 
